--- a/Resources/administration/src/module/sw-catalog/page/sw-catalog-detail/sw-catalog-detail.less
+++ b/Resources/administration/src/module/sw-catalog/page/sw-catalog-detail/sw-catalog-detail.less
@@ -13,6 +13,9 @@
 
     .sw-catalog-detail__intro {
         margin-bottom: 30px;
+        font-size: @font-size-small;
+        color: @color-kashmir;
+        line-height: 20px;
     }
 
     .sw-catalog-detail__properties {
