--- a/Resources/administration/src/module/sw-catalog/page/sw-catalog-list/sw-catalog-list.html.twig
+++ b/Resources/administration/src/module/sw-catalog/page/sw-catalog-list/sw-catalog-list.html.twig
@@ -19,7 +19,7 @@
 
                 {% block sw_catalog_list_introduction %}
                     <sw-card class="sw-catalog-list__overview">
-                        <sw-container grid="100px 1fr" align="start">
+                        <sw-container columns="100px 1fr" align="start">
                             <sw-icon name="default-package-closed" size="60" :style="{ color: $route.meta.$module.color }"></sw-icon>
                             <div class="sw-catalog-list__intro">
                                 <h3>{{ $tc('sw-catalog.general.introHeadlineCatalogs') }}</h3>
