--- a/Resources/administration/src/module/sw-order/component/sw-order-delivery/sw-order-delivery.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-delivery/sw-order-delivery.html.twig
@@ -34,7 +34,7 @@
                 {% block sw_order_delivery_row_info %}
                     <sw-card-section divider="top" secondary slim>
                         {% block sw_order_detail_delivery_info %}
-                            <sw-container grid="1fr 1fr" gap="0 30px">
+                            <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0 30px">
 
                                 {% block sw_order_delivery_metadata %}
                                     <sw-description-list>
