--- a/Resources/administration/src/module/sw-sales-channel/component/sw-sales-channel-modal/sw-sales-channel-modal.html.twig
+++ b/Resources/administration/src/module/sw-sales-channel/component/sw-sales-channel-modal/sw-sales-channel-modal.html.twig
@@ -80,7 +80,7 @@
         {% block sw_sales_channel_modal_detail %}
             <div v-else>
                 {% block sw_sales_channel_modal_detail_header %}
-                    <sw-container grid="165px 1fr" gap="30px" class="sw-sales-channel-modal__detail-header">
+                    <sw-container columns="165px 1fr" gap="30px" class="sw-sales-channel-modal__detail-header">
                         {% block sw_sales_channel_modal_detail_header_cover %}
                             <div class="sw-sales-channel-modal__detail-cover">
                                 <img :src="detailType.coverUrl">
