--- a/Resources/administration/src/app/component/form/sw-text-editor/sw-text-editor.html.twig
+++ b/Resources/administration/src/app/component/form/sw-text-editor/sw-text-editor.html.twig
@@ -11,7 +11,7 @@
 
         {% block sw_text_editor_sub_toolbar %}
             <div class="editor__sub-toolbar">
-                <sw-container grid="1fr" justify="right">
+                <sw-container columns="1fr" justify="right">
                     <span class="editor__text-length">{{ $tc('global.sw-text-editor.labelTextLength', textLength, { count: textLength }) }}</span>
                 </sw-container>
             </div>
