--- a/Resources/administration/src/module/sw-customer/component/sw-customer-address-form/sw-customer-address-form.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-address-form/sw-customer-address-form.html.twig
@@ -1,7 +1,7 @@
 {% block sw_customer_address_form %}
     <div class="sw-customer-address-form">
         {% block sw_customer_address_form_container %}
-            <sw-container grid="1fr 1fr" gap="0px 30px">
+            <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
                 {% block sw_customer_address_form_company_field %}
                     <sw-field :label="$tc('sw-customer.addressForm.labelCompany')"
                               v-model="address.company">
@@ -15,7 +15,7 @@
                 {% endblock %}
 
                 {% block sw_customer_address_form_salutation_title_container %}
-                    <sw-container grid="1fr 1fr" gap="10px">
+                    <sw-container columns="1fr 1fr" gap="10px">
                         {% block sw_customer_address_form_salutation_field %}
                             <sw-field :label="$tc('sw-customer.addressForm.labelSalutation')"
                                       validation="required"
@@ -65,7 +65,7 @@
                 {% endblock %}
 
                 {% block sw_customer_address_form_zipcode_city_container %}
-                    <sw-container grid="90px 1fr" gap="10px">
+                    <sw-container columns="90px 1fr" gap="10px">
                         {% block sw_customer_address_form_zipcode_field %}
                             <sw-field :label="$tc('sw-customer.addressForm.labelZipcode')"
                                       validation="required"
