--- a/Resources/administration/src/module/sw-customer/component/sw-customer-base-info/sw-customer-base-info.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-base-info/sw-customer-base-info.html.twig
@@ -1,5 +1,5 @@
 {% block sw_customer_base_info %}
-    <sw-container class="sw-customer-base-info" grid="1fr 1fr" gap="0px 30px">
+    <sw-container class="sw-customer-base-info" columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
         {% block sw_customer_base_info_metadata %}
             <sw-description-list>
                 {% block sw_customer_base_metadata_customer_number %}
