--- a/Resources/administration/src/module/sw-settings-payment/page/sw-settings-payment-detail/sw-settings-payment-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-payment/page/sw-settings-payment-detail/sw-settings-payment-detail.html.twig
@@ -30,7 +30,7 @@
                 {% block sw_settings_payment_detail_content_card %}
                     <sw-card :title="$tc('sw-settings-payment.detail.titleCard')">
 
-                        <sw-container grid="1fr 1fr" gap="0px 30px">
+                        <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
                             {% block sw_settings_payment_detail_content_field_active %}
                                 <sw-field type="checkbox"
                                           :label="$tc('sw-settings-payment.detail.labelActive')"
