--- a/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
@@ -36,7 +36,7 @@
                                       v-model="shippingMethod.name">
                             </sw-field>
                         {% endblock %}
-                        <sw-container grid="1fr 1fr" gap="0px 30px">
+                        <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
                             {% block sw_settings_shipping_detail_content_field_active %}
                                 <sw-field type="checkbox"
                                           :label="$tc('sw-settings-shipping.detail.labelActive')"
