NEXT-647 - Restore old sidebar behavior

--- a/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.less
+++ b/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.less
@@ -1,16 +1,17 @@
 @import "~less/variables";
 
+@sw-card-view-z-index-sidebar: @z-index-sidebar;
+
 .sw-card-view {
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 100%;
-    display: grid;
-    grid-template-columns: 1fr auto;
 
     .sw-card-view__content {
         width: 100%;
-        height: 1fr;
+        height: 100%;
         padding: 40px;
+        position: absolute;
         overflow-x: hidden;
         overflow-y: auto;
         -webkit-overflow-scrolling: touch;
@@ -31,5 +32,10 @@
                 max-width: 100%;
             }
         }
+    }
+
+    .sw-card-view__sidebar {
+        position: absolute;
+        z-index: @sw-card-view-z-index-sidebar;
     }
 }
