NTR - Remove unwanted background color from pagination buttons

--- a/Resources/administration/src/app/component/grid/sw-pagination/sw-pagination.less
+++ b/Resources/administration/src/app/component/grid/sw-pagination/sw-pagination.less
@@ -22,13 +22,14 @@
         list-style: none;
         margin: 0;
     }
+
     .sw-pagination__list-button,
     .sw-pagination__page-button,
     .sw-pagination__list-separator {
         padding: 8px 12px;
         border: 0 none;
         color: @sw-pagination-controls-color-text;
-        background: @color-white;
+        background: none;
         cursor: pointer;
         outline: none;
 
