NEXT-647 - Fix input field width calculation via flexbox inside css grid

--- a/Resources/administration/src/app/component/form/sw-field/sw-field.less
+++ b/Resources/administration/src/app/component/form/sw-field/sw-field.less
@@ -25,6 +25,7 @@
         input,
         .sw-field__select select {
             border-radius: @sw-field-border-radius 0 0 @sw-field-border-radius;
+            min-width: 0;
         }
     }
 
