--- a/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.less
+++ b/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.less
@@ -1,13 +1,13 @@
 @import "~less/variables";
 
+@sw-product-media-form-border-color:            @color-steam-cloud;
+@sw-product-media-form-border-radius:           @border-radius-default;
+@sw-product-media-form-upload-background-color: @color-light-gray;
+
 .sw-product-media-form {
 
     .sw-product-media-form__file-input {
         display: none;
-    }
-
-    .sw-product-media-form__dropzone {
-        text-align: center;
     }
 
     .sw-product-media-form__upload-button {
@@ -31,5 +31,45 @@
         grid-column-end: 3;
         grid-row-start: 1;
         grid-row-end: 3;
+    }
+
+    .sw-product-media-form__dropzone {
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr;
+        grid-column-start: 2;
+        grid-row-start: 1;
+        min-width: 100px;
+        min-height: 70px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        border: 1px dashed @sw-product-media-form-border-color;
+        border-radius: @sw-product-media-form-border-radius;
+        background-color: @sw-product-media-form-upload-background-color;
+        position: relative;
+        padding: 20px;
+
+        .sw-product-media-form__upload-caption {
+            align-self: center;
+            font-size: 18px;
+            text-align: center;
+            display: block;
+            grid-row-start: 1;
+
+            .sw-icon {
+                margin-right: 8px;
+            }
+        }
+
+
+        .sw-product-media-form__logo-upload {
+            align-self: center;
+            text-align: center;
+            grid-row-start: 2;
+
+            .sw-button {
+                margin: 8px;
+            }
+        }
     }
 }
