NEXT-1044 - feature flag implementation

--- a/Resources/views/administration/index.html.twig
+++ b/Resources/views/administration/index.html.twig
@@ -64,7 +64,8 @@
         schemeAndHttpHost: '{{ app.request.schemeAndHttpHost }}',
         uri: '{{ app.request.uri }}',
         basePath: '{{ app.request.basePath }}',
-        pathInfo: '{{ app.request.pathInfo }}'
+        pathInfo: '{{ app.request.pathInfo }}',
+        features: {{ features|json_encode|raw }}
     };
 
     Shopware.Application.start(applicationContext);
