NEXT-911 - Add tests for sales channels

--- a/Resources/administration/src/module/sw-product/component/sw-product-category-form/sw-product-category-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-category-form/sw-product-category-form.html.twig
@@ -15,6 +15,7 @@
 
             {% block sw_product_category_form_category_field %}
                 <sw-multi-select id="categories"
+                                 class="sw-product-detail__category-select"
                                  ref="multiSelectCategories"
                                  :label="$tc('sw-product.categoryForm.labelCategory')"
                                  :placeholder="$tc('sw-product.categoryForm.placeholderCategory')"
