--- a/Resources/administration/src/module/sw-sales-channel/component/structure/sw-sales-channel-menu/sw-sales-channel-menu.html.twig
+++ b/Resources/administration/src/module/sw-sales-channel/component/structure/sw-sales-channel-menu/sw-sales-channel-menu.html.twig
@@ -29,6 +29,7 @@
 
                         {% block sw_sales_channel_menu_navigation_main_items %}
                             <sw-admin-menu-item v-for="entry in menuItems"
+                                                class="sw-admin-menu__sales-channel-item"
                                                 :entry="entry"
                                                 :key="entry.id || entry.path"
                                                 iconSize="16px"
