NEXT-984 - Expand sidebar and reduce content width

--- a/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.html.twig
@@ -7,10 +7,9 @@
         {% endblock %}
 
         {% block sw_card_view_sidebar %}
-            <sw-sidebar
-                v-if="sidebar"
-                class="sw-card-view__sidebar"
-                :style="adjustScrollbar">
+            <sw-sidebar v-if="sidebar"
+                        class="sw-card-view__sidebar"
+                        :style="adjustScrollbar">
                 <slot name="card-view-sidebar">{% block sw_card_view_slot_sidebar %}{% endblock %}</slot>
             </sw-sidebar>
         {% endblock %}
