NEXT-984 - Add mixin for smartBar und searchBar adjustments

--- a/Resources/administration/src/app/component/structure/sw-page/sw-page.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-page/sw-page.html.twig
@@ -11,7 +11,7 @@
             <div class="sw-page__container" :class="pageContainerClasses">
 
                 {% block sw_page_smart_bar %}
-                    <div v-if="showSmartBar" class="sw-page__smart-bar" :style="smartBarStyles">
+                    <div v-if="showSmartBar" class="sw-page__smart-bar" :style="[headerOffsetStyles, smartBarStyles]">
 
                         {% block sw_page_smart_bar_back_btn %}
                             <slot name="smart-bar-back">
